fix overlap of inputs

--- a/src/App.css
+++ b/src/App.css
@@ -11,6 +11,7 @@ body {
     width: 150px;
     left: -0.5rem;
     box-shadow: 0 3px 5px rgba(0, 0, 0, 0.2);
+    z-index: 999;
 }
 
 .partial-translation {
